src/objects/Business_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Current_Plan_Calculated__c</fullName>
        <formula>IF(
    AND(ISPICKVAL( Status__c , 
                   &apos;Published&apos;),
                   Today() &gt;= Start_Date__c, 
                   Today() &lt;= End_Date__c), true, false)</formula>
        <label>Current Plan (Calculated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Progress__c</fullName>
        <formula>Progress__c / Total_of_Goals__c</formula>
        <label>Current Progress %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PartnerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan For</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>contains</operation>
                <value>Channel Partner / Reseller, Installation Partner, Technology Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Plans</relationshipLabel>
        <relationshipName>Business_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <label>% Progress Sum</label>
        <summarizedField>Goals__c.percent_Complete__c</summarizedField>
        <summaryForeignKey>Goals__c.BusinessPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Published_On__c</fullName>
        <label>Published On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revision_Count__c</fullName>
        <label>Revision Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_of_Goals__c</fullName>
        <label>Total # of Goals</label>
        <summaryForeignKey>Goals__c.BusinessPlan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trigger_Approval_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Approval Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision__c</fullName>
        <label>Vision</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2018</fullName>
                    <default>true</default>
                    <label>2018</label>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Business Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PartnerAccount__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Year__c</columns>
        <columns>Status__c</columns>
        <columns>Current_Plan_Calculated__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PLAN-{0000}</displayFormat>
        <label>Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>